--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   background-color: #282c34;
 }
 
+p { color: white}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
